unpackaged/main/default/objects/Account/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>