unpackaged/main/default/objects/Account/fields/Economic_Group_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Ext_Id__c</fullName>
    <description>This field will have information about Unique Id from Integration Source : MS Dynamics CRM</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Economic Group ID</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>