unpackaged/main/default/objects/Account/fields/Firm_Classification__c.field-meta.xml
<CustomField>
    <fullName>Firm_Classification__c</fullName>
    <label>Firm Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
            <value>
                <fullName>International Counsel - US</fullName>
            </value>
            <value>
                <fullName>International Counsel - Non US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>