unpackaged/main/default/objects/Account/fields/Firm_Tracker_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_Tracker_ID__c</fullName>
    <description>Legacy Firm Tracker ID from Legal Tracker</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Firm Tracker ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>