unpackaged/main/default/objects/Account/fields/IDB_CRM_Link__c.field-meta.xml
<CustomField>
    <fullName>IDB_CRM_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM Link</label>
    <type>Url</type>
</CustomField>