unpackaged/main/default/objects/Account/fields/Last_IDD__c.field-meta.xml
<CustomField>
    <fullName>Last_IDD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last IDD</label>
    <type>Date</type>
</CustomField>