unpackaged/main/default/objects/Account/fields/Number_of_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attorneys__c</fullName>
    <label>Number of Attorneys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>