unpackaged/main/default/objects/Account/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>