unpackaged/main/default/objects/Account/fields/Open_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Open_Accruals__c</fullName>
    <description>Accounts is a lookup on Accruals so this value is computed via PB on Accruals and a Flow</description>
    <inlineHelpText>Computed roll-up of count of open Accrual record for this Law Firm ($0 in Accrual Submitted Amount). Used by system to generate Accrual notifications and reminders.</inlineHelpText>
    <label>Open Accruals</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>