unpackaged/main/default/objects/Account/fields/Panel_Date__c.field-meta.xml
<CustomField>
    <fullName>Panel_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Panel Date</label>
    <type>Date</type>
</CustomField>