unpackaged/main/default/objects/Account/fields/Panel_Firm__c.field-meta.xml
<CustomField>
    <fullName>Panel_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panel Firm</label>
    <type>Checkbox</type>
</CustomField>