unpackaged/main/default/objects/Account/recordTypes/Economic_Group.recordType-meta.xml
<RecordType>
    <fullName>Economic_Group</fullName>
    <active>true</active>
    <label>Economic Group</label>
</RecordType>