unpackaged/main/default/objects/Account/recordTypes/Individuals.recordType-meta.xml
<RecordType>
    <fullName>Individuals</fullName>
    <active>true</active>
    <label>Individuals</label>
</RecordType>