unpackaged/main/default/objects/Account/listViews/All_Organizations.listView-meta.xml
<ListView>
    <fullName>All_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Organization_Ext_Id__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <label>All Organizations</label>
</ListView>